// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Reference render create mode 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="fieldType-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws label"
                style="height: 36px;"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-top-small--1-XA StyledProps---inline--1f52"
                />
                <div
                  class="bp3-form-group"
                  data-id="fieldType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="fieldType"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="Plaintext"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="textField"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Text Reference render edit mode with encrypted value 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="fieldType-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws label"
                style="height: 36px;"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-top-small--1-XA StyledProps---inline--1f52"
                />
                <div
                  class="bp3-form-group"
                  data-id="fieldType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="fieldType"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="Plaintext"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="textField"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Text Reference render edit mode with text value 1`] = `
<div>
  <div
    class="OverlaySpinner---overlaySpinner--3Bs3"
  >
    <form
      class="FormikForm---main--1N87"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="fieldType-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout---vertical--3Szv StyledProps---main--1Wws"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws label"
                style="height: 36px;"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-top-small--1-XA StyledProps---inline--1f52"
                />
                <div
                  class="bp3-form-group"
                  data-id="fieldType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="fieldType"
                            placeholder="Search..."
                            style="padding-right: 0px;"
                            type="text"
                            value="Plaintext"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="textField"
                      type="text"
                      value="test"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
